--- a/dashboard.html
+++ b/dashboard.html
@@ -7,10 +7,17 @@
     <link href="css/dashboard.css" rel="stylesheet">
   </head>
   <body>
-  <div class="welcomeBox">
-    Welcome
+  <div id="firstView">
+    <div class="welcomeBox">
+      Welcome
+    </div>
+    <div class="welcomeBox" id="nameArea">
+    </div>
   </div>
-  <div class="welcomeBox" id="nameArea">
+  <div>
+    <div class="startShine shine" id="earlyView">
+      This is early view
+    </div>
   </div>
   <script src="javascript/dashboard.js"></script>
   </body>
